syntax = "proto3";

package event;

option go_package = ".;grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

service EventsService {
  rpc CreateEvent(CreateEventRequest) returns (EventResponse) {}
  rpc GetEvent(GetEventRequest) returns (EventResponse) {}
  rpc UpdateEvent(UpdateEventRequest) returns (EventResponse) {}
  rpc DeleteEvent(DeleteEventRequest) returns (google.protobuf.Empty) {}
  rpc ListEvents(EventListRequest) returns (EventList) {}
}

message EventResponse {
  int64 ID = 1;
  string Title = 2;
  google.protobuf.Timestamp StartTime = 3;
  google.protobuf.Duration Duration = 4;
  int64 UserID = 5;
}

message IncomingEvent {
  string Title = 1;
  google.protobuf.Timestamp StartTime = 2;
  google.protobuf.Duration Duration = 3;
  string Description = 4;
  google.protobuf.Duration RemindDuration = 5;
}

message EventList {
  repeated EventResponse List = 1;
}

message CreateEventRequest {
  string Title = 1;
  google.protobuf.Timestamp StartTime = 2;
  google.protobuf.Duration Duration = 3;
  int64 UserID = 4;
}

message GetEventRequest {
  int64 ID = 1;
  int64 UserID = 2;
}

message UpdateEventRequest {
  int64 ID = 1;
  string Title = 2;
  google.protobuf.Timestamp StartTime = 3;
  google.protobuf.Duration Duration = 4;
  int64 UserID = 5;
}

message DeleteEventRequest {
  int64 ID = 1;
  int64 UserID = 2;
}

message EventListRequest {
  google.protobuf.Timestamp StartTime = 1;
  google.protobuf.Timestamp EndTime = 2;
  int64 UserID = 3;
}
